--- a/Solution2.ipynb
+++ b/Solution2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Solution2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNEVuUe4Np2duRxnRIg9WkF",
+      "authorship_tag": "ABX9TyORuMRv9qxAHPjUaYWdDPPK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
         "id": "MwCmH-L0Usi6"
       },
       "source": [
-        "In this notebook, I will only consider all particles that are obj1 and all events that end with j"
+        "In this notebook, I will consider all particles that are obj1 where the event ends with j."
       ]
     },
     {
