Show compression difference

--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -14,7 +14,7 @@
         "QgL-_l0T6cgs"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYsuFcO5Z6DsfIl/3wdvaG",
+      "authorship_tag": "ABX9TyMIM1FcO/BOLqIe8hEzWDRp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,7 @@
         "import pandas as pd\r\n",
         "import numpy as np\r\n",
         "import matplotlib.pyplot as plt\r\n",
+        "import seaborn as sns\r\n",
         "import time\r\n",
         "import os\r\n",
         "import csv\r\n",
@@ -69,7 +70,7 @@
         "from fastai.metrics import mse\r\n",
         "from fastai.callback import schedule"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +103,7 @@
         "        data.append(line.replace(';', ',').rstrip(',\\n').split(','))\r\n",
         "data[0]"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +165,7 @@
       "source": [
         "len(data)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +195,7 @@
         "n_cols = len(max(data, key=len))\r\n",
         "n_cols"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +229,7 @@
         "    columns.append(f'{particle_cols[i % 5]}{i // 5 + 1}')\r\n",
         "len(columns)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +259,7 @@
         "particles = pd.DataFrame(data, columns=columns)\r\n",
         "particles"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1156,7 +1157,7 @@
         "jets = jets.reset_index(drop=True)\r\n",
         "jets"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1330,7 +1331,7 @@
         "jets.reset_index(inplace=True, drop=True)\r\n",
         "jets.head()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1434,7 +1435,7 @@
       "source": [
         "jets.shape"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1462,7 +1463,7 @@
       "source": [
         "jets.isna().sum()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1495,7 +1496,7 @@
       "source": [
         "jets.drop('obj1', axis=1, inplace=True)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1522,7 +1523,7 @@
       "source": [
         "jets.info()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1556,7 +1557,7 @@
         "jets = jets.apply(pd.to_numeric)\r\n",
         "jets.info()"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1585,7 +1586,7 @@
       "source": [
         "jets.columns = ['E', 'pt', 'eta', 'phi']"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1629,7 +1630,7 @@
         "jets_standard = (jets - jets.mean()) / jets.std()\r\n",
         "jets_standard.describe()"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1764,7 +1765,7 @@
         "jets11 = 2 * ((jets - jets.min()) / (jets.max() - jets.min())) - 1\r\n",
         "jets11.describe()"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1909,7 +1910,7 @@
         "jets_custom['phi'] = jets_custom['phi'] / 3\r\n",
         "jets_custom.describe()"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2049,7 +2050,7 @@
         "        plt.xlabel(xlabel=variable_list[kk] + ' ' + unit_list[kk])\r\n",
         "        plt.ylabel('# of events')"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2065,7 +2066,7 @@
       "source": [
         "plot_hist(jets, 'No Normalization')"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2095,7 +2096,7 @@
       "source": [
         "plot_hist(jets_standard, 'Standardization Curves')"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2125,7 +2126,7 @@
       "source": [
         "plot_hist(jets11, 'Custom Normalization to [-1, 1]')"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2156,7 +2157,7 @@
         "units = ['[log(GeV)]', '[rad/3]', '[rad/3]', '[log(GeV)]']\r\n",
         "plot_hist(jets_custom, 'Custom Normalization by Wulff, E.. (2020)', units)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2202,7 +2203,7 @@
         "\r\n",
         "X_train, X_valid = train_test_split(jets, test_size=0.2, random_state=1)"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2218,7 +2219,7 @@
       "source": [
         "X_train.head()"
       ],
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2319,7 +2320,7 @@
         "\r\n",
         "    return df"
       ],
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2334,7 +2335,7 @@
       "source": [
         "X_train, X_valid = normalize_custom(X_train), normalize_custom(X_valid)"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2360,7 +2361,7 @@
         "train_ds = TensorDataset(torch.tensor(X_train.values, dtype=torch.float), torch.tensor(X_train.values, dtype=torch.float))\r\n",
         "valid_ds = TensorDataset(torch.tensor(X_valid.values, dtype=torch.float), torch.tensor(X_valid.values, dtype=torch.float))"
       ],
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2375,7 +2376,7 @@
       "source": [
         "len(train_ds), len(valid_ds)"
       ],
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2405,7 +2406,7 @@
         "valid_dl = DataLoader(valid_ds, batch_size=bs * 2)\r\n",
         "dls = core.DataLoaders(train_dl, valid_dl)"
       ],
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2448,7 +2449,7 @@
         "model = AE_3D_200_LeakyReLU()\r\n",
         "model.to('cpu')"
       ],
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2489,7 +2490,7 @@
         "recorder = learner.Recorder()\r\n",
         "learn = learner.Learner(dls, model=model, wd=wd, loss_func=loss_func, cbs=recorder)"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2508,7 +2509,7 @@
         "print('Learning rate with the minimum loss:', lr_min)\r\n",
         "print('Learning rate with the steepest gradient:', lr_steep)"
       ],
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2552,7 +2553,7 @@
         "print('Training took', delta_t, 'seconds')\r\n",
         "# Training took 83.10589644300035 seconds"
       ],
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2776,7 +2777,7 @@
       "source": [
         "recorder.plot_loss()"
       ],
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2805,7 +2806,7 @@
       "source": [
         "learn.validate()"
       ],
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2831,7 +2832,7 @@
         "if not os.path.exists(save_dir):\r\n",
         "    os.makedirs(save_dir)"
       ],
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2848,7 +2849,7 @@
         "    \r\n",
         "    return df"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2902,7 +2903,7 @@
         "\r\n",
         "    return bins_in, bins_out"
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2918,7 +2919,7 @@
       "source": [
         "train_bins_in, train_bins_out = plot_compression(X_train)"
       ],
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2948,7 +2949,7 @@
       "source": [
         "valid_bins_in, valid_bins_out = plot_compression(X_valid)"
       ],
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2983,7 +2984,7 @@
         "            bins.append((float(b2)-float(b1))/b1)\r\n",
         "    return bins"
       ],
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2997,7 +2998,7 @@
         "phi_in, phi_out = valid_bins_in[2], valid_bins_out[2]\r\n",
         "E_in, E_out = valid_bins_in[3], valid_bins_out[3]"
       ],
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3012,7 +3013,7 @@
         "E_ratio = getRatio(E_in, E_out)\r\n",
         "ratios = [pt_ratio, eta_ratio, phi_ratio, E_ratio]"
       ],
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3027,7 +3028,7 @@
       "source": [
         "len(pt_ratio)"
       ],
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3066,7 +3067,7 @@
         "        plt.ylabel('# of jets')\r\n",
         "    fig.tight_layout()"
       ],
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3082,7 +3083,7 @@
       "source": [
         "plot_residual(ratios)"
       ],
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3102,7 +3103,85 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u5IIjxuSyEMU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eE5GLXOy2mcc",
+        "outputId": "86394eb2-0b29-4282-ea8d-85451dc111f5"
+      },
+      "source": [
+        "jets.info()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 6202 entries, 0 to 6201\n",
+            "Data columns (total 4 columns):\n",
+            " #   Column  Non-Null Count  Dtype  \n",
+            "---  ------  --------------  -----  \n",
+            " 0   E       6202 non-null   float64\n",
+            " 1   pt      6202 non-null   float64\n",
+            " 2   eta     6202 non-null   float64\n",
+            " 3   phi     6202 non-null   float64\n",
+            "dtypes: float64(4)\n",
+            "memory usage: 193.9 KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_jf6FXQ28Yx_"
+      },
+      "source": [
+        "data = torch.tensor(jets_custom.values, dtype=torch.float)\r\n",
+        "compressed = model.encode(data)\r\n",
+        "compressed_df = pd.DataFrame(compressed)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jkZ7xP2z9CCX",
+        "outputId": "7e6af44a-d3bd-4de1-ae25-1c85000ce1cd"
+      },
+      "source": [
+        "compressed_df.info()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 6202 entries, 0 to 6201\n",
+            "Data columns (total 3 columns):\n",
+            " #   Column  Non-Null Count  Dtype  \n",
+            "---  ------  --------------  -----  \n",
+            " 0   0       6202 non-null   float32\n",
+            " 1   1       6202 non-null   float32\n",
+            " 2   2       6202 non-null   float32\n",
+            "dtypes: float32(3)\n",
+            "memory usage: 72.8 KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dZrM6WWV9Qug"
       },
       "source": [
         ""
